--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -25,15 +25,15 @@ services:
     image: postgres:latest
     restart: unless-stopped
     environment:
-      POSTGRES_DB: ${BLUEPRINT_DB_DATABASE:-database}
-      POSTGRES_USER: ${BLUEPRINT_DB_USERNAME:-user}
+      POSTGRES_DB: ${BLUEPRINT_DB_DATABASE:-postgres}
+      POSTGRES_USER: ${BLUEPRINT_DB_USERNAME:-postgres}
       POSTGRES_PASSWORD: ${BLUEPRINT_DB_PASSWORD:-password}
     ports:
       - "${BLUEPRINT_DB_PORT:-5432}:5432"
     volumes:
       - psql_volume_bp:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "${BLUEPRINT_DB_USERNAME:-user}"]
+      test: ["CMD", "pg_isready", "-U", "${BLUEPRINT_DB_USERNAME:-postgres}"]
       interval: 5s
       timeout: 5s
       retries: 10
